deployment/image.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: image-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: image
  template:
    metadata:
      labels:
        app: image
    spec:
      containers:
      - name: image
        image: unservice/image_service
        ports:
        - containerPort: 2020
