deployment/metadata.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metadata-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metadata
  template:
    metadata:
      labels:
        app: metadata
    spec:
      containers:
      - name: metadata
        image: unservice/metadata_service
        ports:
        - containerPort: 2060
