deployment/streaming.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streaming-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: streaming
  template:
    metadata:
      labels:
        app: streaming
    spec:
      volumes:
        - name: stream-song-pv
          persistentVolumeClaim:
            claimName: song-pv-claim
      containers:
      - name: streaming
        image: unservice/streaming_service_simple
        ports:
        - containerPort: 2040
        volumeMounts:
          - mountPath: "/app/volume"
            name: stream-song-pv
