deployment/image.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: image-service
spec:
  type: NodePort
  selector:
    app: image
  ports:
  - port: 102020
    targetPort: 2020
