deployment/login.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: login-service
spec:
  type: NodePort
  selector:
    app: login
  ports:
  - port: 108080
    targetPort: 8080
