deployment/metadata.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metadata-service
spec:
  type: NodePort
  selector:
    app: metadata
  ports:
  - port: 12060
    targetPort: 2060
