deployment/streaming.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: streaming-service
spec:
  type: ClusterIP
  selector:
    app: streaming
  ports:
  - port: 2040
    targetPort: 2040
