deployment/tangle.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tangle-service
spec:
  type: ClusterIP
  selector:
    app: test-tangle
  ports:
  - port: 2040
    targetPort: 2040
