deployment/whirlpool.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whirlpool-service
spec:
  type: ClusterIP
  selector:
    app: test-whirlpool
  ports:
  - port: 2040
    targetPort: 2040
