deployment/ingress.service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traffic-router
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: frontend-service
              servicePort: 10080
          # - path: /image/*
          #   backend:
          #       serviceName: image-service
          #       servicePort: 12020
          # - path: /login/*
          #   backend:
          #     serviceName: login-service
          #     servicePort: 18080
          # - path: /metadata/*
          #   backend:
          #     serviceName: metadata-service
          #     servicePort: 12060
          # # - path: /streaming/*
          #   backend:
          #     serviceName: streaming-service
          #     servicePort: 12040
